--- a/lab3_sklearn/Lab3.ipynb
+++ b/lab3_sklearn/Lab3.ipynb
@@ -24,7 +24,7 @@
     "\\text{minimize } \\|w\\|_2^2 \n",
     "$$\n",
     "$$\n",
-    "\\text{subject to } y_i(\\big<w_i, x_i\\big> + b) \\geq 1 \\text{ for any $i = 1,\\ldots, n$.}\n",
+    "\\text{subject to } y_i(\\big<w, x_i\\big> + b) \\geq 1 \\text{ for any $i = 1,\\ldots, n$.}\n",
     "$$"
    ]
   },
@@ -37,7 +37,7 @@
     "\\text{minimize } \\|w\\|_2^2 + C\\sum_{i=1}^n \\xi_i\n",
     "$$\n",
     "$$\n",
-    "\\text{subject to } y_i(\\big<w_i, x_i\\big> + b) \\geq 1 - \\xi_i, \\xi \\geq 0 \\text{ for any $i = 1,\\ldots, n$.}\n",
+    "\\text{subject to } y_i(\\big<w, x_i\\big> + b) \\geq 1 - \\xi_i, \\xi \\geq 0 \\text{ for any $i = 1,\\ldots, n$.}\n",
     "$$"
    ]
   },
@@ -48,13 +48,13 @@
     "### A different view compared with ridge regression\n",
     "\n",
     "$$\n",
-    "\\text{minimize } \\sum_{i=1}^n L(y_i,\\big<w_i, x_i\\big> + b) + \\frac{1}{C} \\|w\\|_2^2 \n",
+    "\\text{minimize } \\sum_{i=1}^n L(y_i,\\big<w, x_i\\big> + b) + \\frac{1}{C} \\|w\\|_2^2 \n",
     "$$\n",
     "where $L(y, v) = \\max(0, 1 - y\\cdot v)$.\n",
     "\n",
     "Compared with Ridge regression:\n",
     "$$\n",
-    "\\text{minimize } \\sum_{i=1}^n (y_i - \\big<w_i, x_i\\big> - b)^2 + \\frac{1}{C} \\|w\\|_2^2 \n",
+    "\\text{minimize } \\sum_{i=1}^n (y_i - \\big<w, x_i\\big> - b)^2 + \\frac{1}{C} \\|w\\|_2^2 \n",
     "$$\n",
     "\n"
    ]
@@ -105,7 +105,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.4.6"
   }
  },
  "nbformat": 4,
