--- a/lab6_clustering/dbscan.ipynb
+++ b/lab6_clustering/dbscan.ipynb
@@ -23,6 +23,111 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "link (http://scikit-learn.org/stable/auto_examples/cluster/plot_dbscan.html#sphx-glr-auto-examples-cluster-plot-dbscan-py)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Automatically created module for IPython interactive environment\n",
+      "Estimated number of clusters: 3\n",
+      "Homogeneity: 0.953\n",
+      "Completeness: 0.883\n",
+      "V-measure: 0.917\n",
+      "Adjusted Rand Index: 0.952\n",
+      "Adjusted Mutual Information: 0.883\n",
+      "Silhouette Coefficient: 0.626\n"
+     ]
+    },
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'matplotlib'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-9-feb21f747d8c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     40\u001b[0m \u001b[0;31m# #############################################################################\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     41\u001b[0m \u001b[0;31m# Plot result\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 42\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mmatplotlib\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpyplot\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     43\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     44\u001b[0m \u001b[0;31m# Black removed and is used for noise instead.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'matplotlib'"
+     ]
+    }
+   ],
+   "source": [
+    "print(__doc__)\n",
+    "\n",
+    "import numpy as np\n",
+    "\n",
+    "from sklearn.cluster import DBSCAN\n",
+    "from sklearn import metrics\n",
+    "from sklearn.datasets.samples_generator import make_blobs\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
+    "\n",
+    "# #############################################################################\n",
+    "# Generate sample data\n",
+    "centers = [[1, 1], [-1, -1], [1, -1]]\n",
+    "X, labels_true = make_blobs(n_samples=750, centers=centers, cluster_std=0.4,\n",
+    "                            random_state=0)\n",
+    "\n",
+    "X = StandardScaler().fit_transform(X)\n",
+    "\n",
+    "# #############################################################################\n",
+    "# Compute DBSCAN\n",
+    "db = DBSCAN(eps=0.3, min_samples=10).fit(X)\n",
+    "core_samples_mask = np.zeros_like(db.labels_, dtype=bool)\n",
+    "core_samples_mask[db.core_sample_indices_] = True\n",
+    "labels = db.labels_\n",
+    "\n",
+    "# Number of clusters in labels, ignoring noise if present.\n",
+    "n_clusters_ = len(set(labels)) - (1 if -1 in labels else 0)\n",
+    "\n",
+    "print('Estimated number of clusters: %d' % n_clusters_)\n",
+    "print(\"Homogeneity: %0.3f\" % metrics.homogeneity_score(labels_true, labels))\n",
+    "print(\"Completeness: %0.3f\" % metrics.completeness_score(labels_true, labels))\n",
+    "print(\"V-measure: %0.3f\" % metrics.v_measure_score(labels_true, labels))\n",
+    "print(\"Adjusted Rand Index: %0.3f\"\n",
+    "      % metrics.adjusted_rand_score(labels_true, labels))\n",
+    "print(\"Adjusted Mutual Information: %0.3f\"\n",
+    "      % metrics.adjusted_mutual_info_score(labels_true, labels))\n",
+    "print(\"Silhouette Coefficient: %0.3f\"\n",
+    "      % metrics.silhouette_score(X, labels))\n",
+    "\n",
+    "# #############################################################################\n",
+    "# Plot result\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# Black removed and is used for noise instead.\n",
+    "unique_labels = set(labels)\n",
+    "colors = [plt.cm.Spectral(each)\n",
+    "          for each in np.linspace(0, 1, len(unique_labels))]\n",
+    "for k, col in zip(unique_labels, colors):\n",
+    "    if k == -1:\n",
+    "        # Black used for noise.\n",
+    "        col = [0, 0, 0, 1]\n",
+    "\n",
+    "    class_member_mask = (labels == k)\n",
+    "\n",
+    "    xy = X[class_member_mask & core_samples_mask]\n",
+    "    plt.plot(xy[:, 0], xy[:, 1], 'o', markerfacecolor=tuple(col),\n",
+    "             markeredgecolor='k', markersize=14)\n",
+    "\n",
+    "    xy = X[class_member_mask & ~core_samples_mask]\n",
+    "    plt.plot(xy[:, 0], xy[:, 1], 'o', markerfacecolor=tuple(col),\n",
+    "             markeredgecolor='k', markersize=6)\n",
+    "\n",
+    "plt.title('Estimated number of clusters: %d' % n_clusters_)\n",
+    "plt.show()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
