--- a/lab7_cross_validation/cv.ipynb
+++ b/lab7_cross_validation/cv.ipynb
@@ -12,13 +12,124 @@
    "metadata": {},
    "source": [
     "## Goal\n",
-    "- Cross validation\n",
+    "- Cross validation to estimate the test error/distribution.\n",
     "- Use cross validation to do hyperparameter selection.\n",
     "- Use sklearn to do cross validation\n",
     "\n",
     "reference: \n",
     "1. [scikit-learn-cross-validation](http://scikit-learn.org/stable/modules/cross_validation.html)\n",
     "2. [scikit-learn-hyperparameter-selection](http://scikit-learn.org/stable/modules/grid_search.html)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Different split rules:\n",
+    "1. K-Fold and K-Fold repeated\n",
+    "2. Stratified K-Fold, Stratiied K-Fold repeated\n",
+    "3. Leave one out\n",
+    "4. Leave K out\n",
+    "5. Shuffle split\n",
+    "6. Stratified shuffle split\n",
+    "7. Grouped K-Fold/Leave one out/shuffle split\n",
+    "8. Predefined.\n",
+    "9. Timeseries split"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn import datasets\n",
+    "from sklearn import svm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((150, 4), (150,))"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "iris = datasets.load_iris()\n",
+    "iris.data.shape, iris.target.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "     iris.data, iris.target, test_size=0.4, random_state=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "StratifiedKFold(n_splits=5, random_state=1, shuffle=False)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=1)]: Done   5 out of   5 | elapsed:    0.0s finished\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([0.96666667, 1.        , 0.96666667, 0.96666667, 1.        ])"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import cross_val_score\n",
+    "from sklearn.model_selection import StratifiedKFold\n",
+    "clf = svm.SVC(kernel='linear', C=1)\n",
+    "cv = StratifiedKFold(5, random_state=1) # stratified split\n",
+    "print(cv)\n",
+    "scores = cross_val_score(clf, iris.data, iris.target, cv=cv, verbose=1)\n",
+    "scores"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Hyper parameter selection\n",
+    "\n",
+    "1. Grid search.\n",
+    "2. Random search.\n",
+    "\n",
+    "It is important to get the scale right (appropriat"
    ]
   },
   {
