--- a/lab10_Reinforcement_learning/Lab10.ipynb
+++ b/lab10_Reinforcement_learning/Lab10.ipynb
@@ -11,11 +11,304 @@
     "    - distinction between RL and supervised learning\n",
     "    - distinction between RL and online learning\n",
     "- Several important examples\n",
-    "    - Bandit problem\n",
-    "    \n",
+    "    - Multi-armed bandit problem\n",
     "    - a control game\n",
-    "- An example using neural net to \n"
+    "- An example using neural net to play CartPole-v0 \n",
+    "\n",
+    "References: \n",
+    "\n",
+    "[Reinforcement learning tutorial Part 2](https://medium.com/@awjuliani/super-simple-reinforcement-learning-tutorial-part-2-ded33892c724)\n",
+    "\n",
+    "[Reinforcement learning tutorial Part 0](https://medium.com/emergent-future/simple-reinforcement-learning-with-tensorflow-part-0-q-learning-with-tables-and-neural-networks-d195264329d0)\n",
+    "\n",
+    "[Theory about Q-learning](http://neuro.cs.ut.ee/demystifying-deep-reinforcement-learning/)\n",
+    "\n",
+    "[CS294 course from Berkeley 2017](http://rll.berkeley.edu/deeprlcourse/) and all the course videos [here](https://www.youtube.com/playlist?list=PLkFD6_40KJIznC9CDbVTjAF2oyt8_VAe3)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###  Movitation\n",
+    "- Agent/environment model\n",
+    "- key: **sequential** decision making, such as Go.\n",
+    "\n",
+    "Compared to supervised learning:\n",
+    "- Usually there is a clear goal what you want to achieve. (Which model is better?)\n",
+    "- supervised learning need labels.\n",
+    "- no labels in reinforcement learning.\n",
+    "\n",
+    "Compared to unsupervised learning:\n",
+    "- both have ambiguous objective functions.\n",
+    "- After figuring out an objective, unsupervised learning is usually easier to optimize. (clustering)\n",
+    "- RL is still hard because of the possible search space.\n",
+    "\n",
+    "Compared to online learning:\n",
+    "- RL is online in nature, but online algorithm can appear elsewhere in supervised/unsupervised learning."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Frozen lake problem \n",
+    "\n",
+    "![frozen lake](https://cdn-images-1.medium.com/max/960/1*MCjDzR-wfMMkS0rPqXSmKw.png)\n",
+    "\n",
+    "** available to play at open AI gym (python package)**\n",
+    "\n",
+    "Terms:\n",
+    "\n",
+    "- policy\n",
+    "- state\n",
+    "- observation\n",
+    "- reward\n",
+    "- Markov decision \n",
+    "\n",
+    "Two ways to learning:\n",
+    "- directly learn the policy (policy gradient)\n",
+    "- learn the Q-function iteratively.\n",
+    "\n",
+    "$$ Q'(s, a) = r + \\gamma \\max_{a'} Q(s, a')$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Example: cartpole-v0\n",
+    "\n",
+    "[details at OpenAI webiste](https://gym.openai.com/envs/CartPole-v0)\n",
+    "\n",
+    "![demo](https://cdn-images-1.medium.com/max/960/1*G_whtIrY9fGlw3It6HFfhA.gif)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import gym\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import tensorflow as tf\n",
+    "import tensorflow.contrib.slim as slim\n",
+    "from sklearn.ensemble import RandomForestClassifier as rf\n",
+    "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[33mWARN: gym.spaces.Box autodetected dtype as <class 'numpy.float32'>. Please provide explicit dtype.\u001b[0m\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.02925718, -0.00325514,  0.01952045,  0.00902916])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "env = gym.make('CartPole-v0')\n",
+    "env.reset()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.9801, 0.99  , 1.    ])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gamma = .99\n",
+    "def discount_rewards(r):\n",
+    "    \"\"\" take 1D float array of rewards and compute discounted reward \"\"\"\n",
+    "    discounted_r = np.zeros_like(r, dtype=float)\n",
+    "    running_add = 0\n",
+    "    for t in reversed(range(0, len(r))):\n",
+    "        running_add = running_add * gamma + r[t]\n",
+    "        discounted_r[t] = running_add\n",
+    "    return discounted_r\n",
+    "discount_rewards(np.array([0, 0, 1]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class agent():\n",
+    "    def __init__(self, lr, s_size,a_size,h_size):\n",
+    "        #These lines established the feed-forward part of the network. The agent takes a state and produces an action.\n",
+    "        self.state_in= tf.placeholder(shape=[None,s_size],dtype=tf.float32)\n",
+    "        hidden = slim.fully_connected(self.state_in,h_size,biases_initializer=None,activation_fn=tf.nn.relu)\n",
+    "        self.output = slim.fully_connected(hidden,a_size,activation_fn=tf.nn.softmax,biases_initializer=None)\n",
+    "        self.chosen_action = tf.argmax(self.output,1)\n",
+    "\n",
+    "        #The next six lines establish the training proceedure. We feed the reward and chosen action into the network\n",
+    "        #to compute the loss, and use it to update the network.\n",
+    "        self.reward_holder = tf.placeholder(shape=[None],dtype=tf.float32)\n",
+    "        self.action_holder = tf.placeholder(shape=[None],dtype=tf.int32)\n",
+    "        \n",
+    "        self.indexes = tf.range(0, tf.shape(self.output)[0]) * tf.shape(self.output)[1] + self.action_holder\n",
+    "        self.responsible_outputs = tf.gather(tf.reshape(self.output, [-1]), self.indexes)\n",
+    "\n",
+    "        self.loss = -tf.reduce_mean(tf.log(self.responsible_outputs)*self.reward_holder)\n",
+    "        \n",
+    "        tvars = tf.trainable_variables()\n",
+    "        self.gradient_holders = []\n",
+    "        for idx,var in enumerate(tvars):\n",
+    "            placeholder = tf.placeholder(tf.float32,name=str(idx)+'_holder')\n",
+    "            self.gradient_holders.append(placeholder)\n",
+    "        \n",
+    "        self.gradients = tf.gradients(self.loss,tvars)\n",
+    "        \n",
+    "        optimizer = tf.train.AdamOptimizer(learning_rate=lr)\n",
+    "        self.update_batch = optimizer.apply_gradients(zip(self.gradient_holders,tvars))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/yu/miniconda3/lib/python3.6/site-packages/tensorflow/python/ops/gradients_impl.py:100: UserWarning: Converting sparse IndexedSlices to a dense Tensor of unknown shape. This may consume a large amount of memory.\n",
+      "  \"Converting sparse IndexedSlices to a dense Tensor of unknown shape. \"\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "26.0\n",
+      "agreed with the past: 0.615385\n",
+      "25.22\n",
+      "agreed with the past: 0.504390\n",
+      "31.73\n",
+      "agreed with the past: 0.519228\n",
+      "41.86\n",
+      "agreed with the past: 0.587411\n",
+      "54.05\n",
+      "agreed with the past: 0.629945\n",
+      "59.39\n",
+      "agreed with the past: 0.643152\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-64-618659be891a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     29\u001b[0m             \u001b[0;31m#a = np.random.choice(a_dist[0],p=a_dist[0])\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     30\u001b[0m             \u001b[0;31m#a = np.argmax(a_dist == a)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 31\u001b[0;31m             \u001b[0ma\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrandom\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mchoice\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma_dist\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0ma_dist\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     32\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     33\u001b[0m             \u001b[0ms1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mr\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0md\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0m_\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0menv\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m#Get our reward for taking an action given a bandit.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "tf.reset_default_graph() #Clear the Tensorflow graph.\n",
+    "\n",
+    "myAgent = agent(lr=1e-2,s_size=4,a_size=2,h_size=8) #Load the agent.\n",
+    "\n",
+    "total_episodes = 2000 #Set total number of episodes to train agent on.\n",
+    "max_ep = 999\n",
+    "update_frequency = 5\n",
+    "\n",
+    "init = tf.global_variables_initializer()\n",
+    "\n",
+    "# Launch the tensorflow graph\n",
+    "with tf.Session() as sess:\n",
+    "    sess.run(init)\n",
+    "    i = 0\n",
+    "    total_reward = []\n",
+    "    total_lenght = []\n",
+    "    agreed = []\n",
+    "    gradBuffer = sess.run(tf.trainable_variables())\n",
+    "    #for ix,grad in enumerate(gradBuffer):\n",
+    "    #    gradBuffer[ix] = grad * 0\n",
+    "        \n",
+    "    while i < total_episodes:\n",
+    "        s = env.reset()\n",
+    "        running_reward = 0\n",
+    "        ep_history = []\n",
+    "        for j in range(max_ep):\n",
+    "            #Probabilistically pick an action given our network outputs.\n",
+    "            a_dist = sess.run(myAgent.output,feed_dict={myAgent.state_in:[s]})\n",
+    "            #a = np.random.choice(a_dist[0],p=a_dist[0])\n",
+    "            #a = np.argmax(a_dist == a)\n",
+    "            a = np.random.choice(np.arange(len(a_dist[0])), p = a_dist[0])\n",
+    "\n",
+    "            s1,r,d,_ = env.step(a) #Get our reward for taking an action given a bandit.\n",
+    "            ep_history.append([s,a,r,s1])\n",
+    "            s = s1\n",
+    "            running_reward += r\n",
+    "            if d == True:\n",
+    "                #Update the network.\n",
+    "                ep_history = np.array(ep_history)\n",
+    "                ep_history[:,2] = discount_rewards(ep_history[:,2])\n",
+    "                feed_dict={myAgent.reward_holder:ep_history[:,2],\n",
+    "                        myAgent.action_holder:ep_history[:,1],myAgent.state_in:np.vstack(ep_history[:,0])}\n",
+    "                grads = sess.run(myAgent.gradients, feed_dict=feed_dict)\n",
+    "                for idx,grad in enumerate(grads):\n",
+    "                    gradBuffer[idx] += grad\n",
+    "\n",
+    "                if i % update_frequency == 0 and i != 0:\n",
+    "                    feed_dict= dictionary = dict(zip(myAgent.gradient_holders, gradBuffer))\n",
+    "                    _ = sess.run(myAgent.update_batch, feed_dict=feed_dict)\n",
+    "                    for ix,grad in enumerate(gradBuffer):\n",
+    "                        gradBuffer[ix] = grad * 0\n",
+    "                \n",
+    "                total_reward.append(running_reward)\n",
+    "                total_lenght.append(j)\n",
+    "                out = sess.run(myAgent.output, feed_dict={myAgent.state_in:np.array([list(i) for i in ep_history[:,0]])})\n",
+    "                pred_actions = [np.argmax(tt) for tt in out]\n",
+    "                agreed.append(np.mean(pred_actions == ep_history[:,1]))\n",
+    "                break\n",
+    "\n",
+    "        \n",
+    "            #Update our running tally of scores.\n",
+    "        if i % 100 == 0:\n",
+    "            print(np.mean(total_reward[-100:]))\n",
+    "            print('agreed with the past: %f'%(np.mean(agreed[-100:])))\n",
+    "        i += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
