--- a/lab3_sklearn/Lab3.ipynb
+++ b/lab3_sklearn/Lab3.ipynb
@@ -80,13 +80,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Limitations of SVM: what kind of data will be not suitable for SVM?"
+   ]
   }
  ],
  "metadata": {
